# Pravah

./: .gitignore  LICENSE  PROPOSAL.md  README.md  pyproject.toml
dashboard/: serve.py
dashboard/static/: index.html
docs/: architecture.tex  make_comparatives.py
onboard/examples/: mall_calib.json
scripts/: after_sweep_queue.py  phase3_blockage_screen.py  phase3_crush_sanity.py  phase3_screen_levers.py  phase6_figures.py  phase8_datagen.py  phase8_train.py  phase9_train.py  phaseA_calibrate.py  phaseA_demo.py  phaseA_validate.py  phaseB_closedloop.py  phaseC_evacuation_seed.py  quickstart_demo.py
sim/: agent.py  conformal.py  detector.py  forecaster.py  perception.py  providers.py
sim/core/: simulation.py
sim/scenarios/: railway_platform.py  railway_release.py
tests/: test_agent_properties.py  test_conformal.py  test_forecaster.py  test_perception.py  test_provider_detector.py  test_railway_platform.py  test_railway_release.py  test_safety_agent.py  test_scenarios.py  test_sfm.py  test_ttc.py
